--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,3 +1,8 @@
+body {
+  background: radial-gradient(#1f3756, #141539);
+  min-height: 100vh;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
