--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,10 @@
+$background-color: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+
+body {
+    background: $background-color;
+    min-height: 100vh;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
