prettier config added

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,10 +5,11 @@ body {
     min-height: 100vh;
 }
 
-.attribution {
+footer {
     font-size: 11px;
     text-align: center;
-  }
-  .attribution a {
-    color: hsl(228, 45%, 44%);
+
+    a {
+        color: hsl(228, 45%, 44%);
+    }
   }
