--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -3,12 +3,12 @@ body {
   min-height: 100vh;
 }
 
-.attribution {
+footer {
   font-size: 11px;
   text-align: center;
 }
 
-.attribution a {
+footer a {
   color: #3e52a3;
 }
 /*# sourceMappingURL=style.css.map */
