--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 $background-color: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+$main-font: 'Barlow Semi Condensed', sans-serif;
 
 body {
     background: $background-color;
@@ -12,4 +13,4 @@ footer {
     a {
         color: hsl(228, 45%, 44%);
     }
-  }
+}
