--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -3,9 +3,39 @@ body {
   min-height: 100vh;
 }
 
+header {
+  width: 50%;
+  border: 2px solid #606e85;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  left: 50%;
+  top: 10%;
+  -webkit-transform: translate(-50%, 10%);
+          transform: translate(-50%, 10%);
+}
+
+header img {
+  height: 92px;
+}
+
+.score-box {
+  height: 100px;
+  width: 130px;
+  background: #f6f6f6;
+  border-radius: 10px;
+  position: absolute;
+  right: 20px;
+}
+
 footer {
   font-size: 11px;
-  text-align: center;
 }
 
 footer a {
