--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: radial-gradient(#1f3756, #141539);
   min-height: 100vh;
@@ -63,6 +68,11 @@ header img {
 
 footer {
   font-size: 11px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
 }
 
 footer a {
