--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,11 @@
 $background-color: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 $main-font: 'Barlow Semi Condensed', sans-serif;
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: $background-color;
     min-height: 100vh;
@@ -54,7 +59,10 @@ header {
 
 footer {
     font-size: 11px;
-
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%);
     a {
         color: hsl(228, 45%, 44%);
     }
