--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,19 +1,17 @@
 $background-color: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 $main-font: 'Barlow Semi Condensed', sans-serif;
-
-* {
-    margin: 0;
-    padding: 0;
-}
+$border-color: hsl(217, 16%, 45%);
 
 body {
     background: $background-color;
     min-height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 header {
     width: 50%;
-    border: 2px solid hsl(217, 16%, 45%);
+    border: 2px solid $border-color;
     border-radius: 20px;
     display: flex;
     padding: 20px;
@@ -55,6 +53,23 @@ header {
             color: #58566b;
         }
     }
+}
+
+.rules-btn {
+    background: transparent;
+    color: #f6f6f6;
+    border: 2px solid $border-color;
+    height: 42px;
+    width: 130px;
+    border-radius: 5px;
+    font: 600 15px $main-font;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 10%;
+    right: 5%;
+    transform: translate(5%, 10%);
 }
 
 footer {
