--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -63,6 +63,15 @@ header img {
   color: #58566b;
 }
 
+.options {
+  background: url("../../images/bg-triangle.svg") no-repeat;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 25%);
+          transform: translate(-50%, 25%);
+}
+
 .rules-btn {
   background: transparent;
   color: #f6f6f6;
