--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -65,11 +65,13 @@ header img {
 
 .options {
   background: url("../../images/bg-triangle.svg") no-repeat;
+  width: 500px;
+  height: 500px;
   position: absolute;
-  top: 25%;
+  top: 20%;
   left: 50%;
-  -webkit-transform: translate(-50%, 25%);
-          transform: translate(-50%, 25%);
+  -webkit-transform: translate(-30%, 20%);
+          transform: translate(-30%, 20%);
 }
 
 .rules-btn {
