--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,10 +1,3 @@
-body {
-  background: radial-gradient(#1f3756, #141539);
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-}
-
 header {
   width: 50%;
   border: 2px solid #606e85;
@@ -30,7 +23,7 @@ header img {
 .score-box {
   height: 100px;
   width: 130px;
-  background: #f6f6f6;
+  background: #f8f8f8;
   border-radius: 10px;
   position: absolute;
   right: 20px;
@@ -66,7 +59,7 @@ header img {
 .options {
   background: url("../../images/bg-triangle.svg") no-repeat;
   width: 500px;
-  height: 500px;
+  height: 400px;
   position: absolute;
   top: 20%;
   left: 50%;
@@ -74,9 +67,95 @@ header img {
           transform: translate(-30%, 20%);
 }
 
+.options__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+}
+
+.options__icon::before {
+  content: '';
+  height: 160px;
+  width: 160px;
+  display: block;
+  z-index: -1;
+  border-radius: 50%;
+}
+
+.options__icon--paper {
+  bottom: 70%;
+  right: 80%;
+}
+
+.options__icon--paper .image {
+  background: url("../../images/icon-paper.svg") no-repeat;
+}
+
+.options__icon--paper::before {
+  background: -webkit-gradient(linear, left top, left bottom, from(#4865f4), to(#5671f5));
+  background: linear-gradient(#4865f4, #5671f5);
+  -webkit-box-shadow: 0 7px #2945c3;
+          box-shadow: 0 7px #2945c3;
+}
+
+.options__icon--scissors {
+  bottom: 70%;
+  right: 27%;
+}
+
+.options__icon--scissors .image {
+  background: url("../../images/icon-scissors.svg") no-repeat;
+}
+
+.options__icon--scissors::before {
+  background: -webkit-gradient(linear, left top, left bottom, from(#ec9e0e), to(#eca922));
+  background: linear-gradient(#ec9e0e, #eca922);
+  -webkit-box-shadow: 0 7px #c66d1b;
+          box-shadow: 0 7px #c66d1b;
+}
+
+.options__icon--rock {
+  bottom: 20%;
+  right: 54%;
+}
+
+.options__icon--rock .image {
+  background: url("../../images/icon-rock.svg") no-repeat;
+}
+
+.options__icon--rock::before {
+  background: -webkit-gradient(linear, left top, left bottom, from(#dc2e4e), to(#dd405d));
+  background: linear-gradient(#dc2e4e, #dd405d);
+  -webkit-box-shadow: 0 7px #9e1531;
+          box-shadow: 0 7px #9e1531;
+}
+
+.options .image {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 12%;
+  left: 12%;
+  background-position: 31% 33%;
+}
+
+.options .image::after {
+  content: '';
+  background: #f8f8f8;
+  height: 120px;
+  width: 120px;
+  display: block;
+  z-index: -1;
+  position: absolute;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 7px #b9bed4 inset;
+          box-shadow: 0 7px #b9bed4 inset;
+}
+
 .rules-btn {
   background: transparent;
-  color: #f6f6f6;
+  color: #f8f8f8;
   border: 2px solid #606e85;
   height: 42px;
   width: 130px;
@@ -92,6 +171,13 @@ header img {
           transform: translate(5%, 10%);
 }
 
+body {
+  background: radial-gradient(#1f3756, #141539);
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 footer {
   font-size: 11px;
   position: absolute;
@@ -103,5 +189,6 @@ footer {
 
 footer a {
   color: #3e52a3;
+  font-family: "Barlow Semi Condensed", sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
