--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -178,6 +178,53 @@ body {
   padding: 0;
 }
 
+.rules {
+  display: none;
+  background: #f8f8f8;
+  position: absolute;
+  height: 400px;
+  width: 400px;
+  border-radius: 10px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.rules__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  position: relative;
+}
+
+.rules__header h1 {
+  margin: 0;
+  padding: 0;
+  color: #3b4163;
+  text-transform: uppercase;
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
+.rules__header img {
+  width: 20px;
+  height: 20px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  position: absolute;
+  right: 20px;
+}
+
+.rules__image {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -70%);
+          transform: translate(-50%, -70%);
+}
+
 footer {
   font-size: 11px;
   position: absolute;
