events added to close and rule buttons

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@ body {
             align-self: center;
             position: absolute;
             right: 20px;
+            cursor: pointer;
         }
     }
 
