--- a/src/scss/_rules.scss
+++ b/src/scss/_rules.scss
@@ -27,6 +27,12 @@
             position: absolute;
             right: 20px;
             cursor: pointer;
+            transition: all 1s;
+
+            &:hover {
+                transform: scale(1.5);
+                transition: all 0.5s;
+            }
         }
     }
 
