game section added and styled

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -18,3 +18,7 @@ $elements_bg-color: #f8f8f8;
 @mixin bg-shadow() {
     box-shadow: 0 7px #b9bed4 inset;
 }
+
+@mixin hand-placement() {
+    background-position: 31% 33%;
+}
