--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -56,6 +56,7 @@
     .computer-choice {
         position: relative;
         display: none;
+        animation: appears 2s 1;
 
         &--rock {
             top: 87%;
@@ -83,5 +84,15 @@
 
     .image {
         @include hand-placement;
+    }
+}
+
+@keyframes appears {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
     }
 }
