options moves - animation added

--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -26,6 +26,14 @@
     }
 }
 
+.move-left {
+    animation: move-left 2s forwards;
+}
+
+.move-right {
+    animation: move-right 2s forwards;
+}
+
 .user-choice {
     position: absolute;
     top: 70%;
@@ -74,8 +82,6 @@
 
     .options__icon {
         transform: scale(1.4);
-        // bottom: 11%;
-        // left: 14%;
         &:hover {
             filter: brightness(100%);
             cursor: auto;
@@ -94,5 +100,25 @@
 
     to {
         opacity: 1;
+    }
+}
+
+@keyframes move-left {
+    from {
+        right: 0;
+    }
+
+    to {
+        right: 18%;
+    }
+}
+
+@keyframes move-right {
+    from {
+        left: 8%;
+    }
+
+    to {
+        left: 20%;
     }
 }
