--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -17,7 +17,6 @@ header {
 
 header img {
   height: 92px;
-  cursor: pointer;
 }
 
 .score-box {
@@ -303,6 +302,12 @@ header img {
 .move-right {
   -webkit-animation: move-right 2s forwards;
           animation: move-right 2s forwards;
+}
+
+.winner-shadow {
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 0 10px #cccccc, 0 0 0 15px #e6e6e6, 0 0 0 20px rgba(230, 230, 230, 0.514);
+          box-shadow: 0 0 0 10px #cccccc, 0 0 0 15px #e6e6e6, 0 0 0 20px rgba(230, 230, 230, 0.514);
 }
 
 .user-choice {
