--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -36,8 +36,9 @@
 
 .winner-shadow {
     border-radius: 50%;
-    box-shadow: 0 0 0 10px hsl(0, 0%, 80%), 0 0 0 15px hsl(0, 0%, 90%),
-        0 0 0 20px hsla(0, 0%, 90%, 0.514);
+    box-shadow: 0 0 0 30px rgba(146, 145, 145, 0.07),
+        0 0 0 60px rgba(146, 145, 145, 0.05),
+        0 0 0 90px rgba(146, 145, 145, 0.03);
 }
 
 .user-choice {
