--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -306,8 +306,8 @@ header img {
 
 .winner-shadow {
   border-radius: 50%;
-  -webkit-box-shadow: 0 0 0 10px #cccccc, 0 0 0 15px #e6e6e6, 0 0 0 20px rgba(230, 230, 230, 0.514);
-          box-shadow: 0 0 0 10px #cccccc, 0 0 0 15px #e6e6e6, 0 0 0 20px rgba(230, 230, 230, 0.514);
+  -webkit-box-shadow: 0 0 0 30px rgba(146, 145, 145, 0.07), 0 0 0 60px rgba(146, 145, 145, 0.05), 0 0 0 90px rgba(146, 145, 145, 0.03);
+          box-shadow: 0 0 0 30px rgba(146, 145, 145, 0.07), 0 0 0 60px rgba(146, 145, 145, 0.05), 0 0 0 90px rgba(146, 145, 145, 0.03);
 }
 
 .user-choice {
