--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -39,6 +39,7 @@
     box-shadow: 0 0 0 30px rgba(146, 145, 145, 0.07),
         0 0 0 60px rgba(146, 145, 145, 0.05),
         0 0 0 90px rgba(146, 145, 145, 0.03);
+    transition: box-shadow 1s ease-in;
 }
 
 .user-choice {
