--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -308,6 +308,10 @@ header img {
   border-radius: 50%;
   -webkit-box-shadow: 0 0 0 30px rgba(146, 145, 145, 0.07), 0 0 0 60px rgba(146, 145, 145, 0.05), 0 0 0 90px rgba(146, 145, 145, 0.03);
           box-shadow: 0 0 0 30px rgba(146, 145, 145, 0.07), 0 0 0 60px rgba(146, 145, 145, 0.05), 0 0 0 90px rgba(146, 145, 145, 0.03);
+  -webkit-transition: -webkit-box-shadow 1s ease-in;
+  transition: -webkit-box-shadow 1s ease-in;
+  transition: box-shadow 1s ease-in;
+  transition: box-shadow 1s ease-in, -webkit-box-shadow 1s ease-in;
 }
 
 .user-choice {
